--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Simple Responsive Page 1</title>
 </head>
 <body>
-    
+    <header>
+        <p>Lorem, ipsum dolor.</p>
+        <h1>Responsive layouts don't have to be a struggle</h1>
+    </header>
 </body>
 </html>
