--- a/index.html
+++ b/index.html
@@ -11,15 +11,29 @@
         <p>Lorem, ipsum dolor.</p>
         <h1>Responsive layouts don't have to be a struggle</h1>
     </header>
-    <h2></h2>
-    <!-- 2 columns that need flexbox, class "split" created -->
-    <div class="split">
-        <div>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta necessitatibus expedita saepe mollitia exercitationem, minus beatae consectetur corrupti laborum dignissimos, pariatur, sunt totam maxime!</p>
+    <section>
+        <h2>Quality Designs</h2>
+        <!-- 2 columns that need flexbox, class "split" created -->
+        <div class="split">
+            <div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta necessitatibus expedita saepe mollitia exercitationem, minus beatae consectetur corrupti laborum dignissimos, pariatur, sunt totam maxime!</p>
+            </div>
+            <div>
+                <p>Odio optio quas non corrupti porro dolore a, ipsam cumque et quisquam inventore quibusdam veniam rem beatae illo qui illum labore consequatur minima eaque voluptas.</p>
+            </div>
         </div>
-        <div>
-            <p>Odio optio quas non corrupti porro dolore a, ipsam cumque et quisquam inventore quibusdam veniam rem beatae illo qui illum labore consequatur minima eaque voluptas.</p>
+    </section>
+    <section>
+        <div class="split">
+            <div></div>
+            <div></div>
         </div>
-    </div>
+    </section>
+    <section>
+        <div class="split">
+            <div></div>
+            <div></div>
+        </div>
+    </section>
 </body>
 </html>
