--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         </div>
     </section>
-    <section class="bg-accent">
+    <section class="bg-primary">
         <div class="split">
             <div>
                 <img src="assests/pexels-craig-adderley-1563356.jpg" alt="Photo by Craig Adderley: https://www.pexels.com/photo/concrete-road-between-trees-1563356/">
