--- a/index.html
+++ b/index.html
@@ -16,36 +16,42 @@
         <h1>Responsive layouts don't have to be a struggle</h1>
     </header>
     <section>
-        <h2 class="text-center">Quality Designs</h2>
-        <!-- 2 columns that need flexbox, class "split" created -->
-        <div class="split">
-            <div>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta necessitatibus expedita saepe mollitia exercitationem, minus beatae consectetur corrupti laborum dignissimos, pariatur, sunt totam maxime!</p>
-            </div>
-            <div>
-                <p>Odio optio quas non corrupti porro dolore a, ipsam cumque et quisquam inventore quibusdam veniam rem beatae illo qui illum labore consequatur minima eaque voluptas.</p>
+        <div class="container">
+            <h2 class="text-center">Quality Designs</h2>
+            <!-- 2 columns that need flexbox, class "split" created -->
+            <div class="split">
+                <div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut dicta necessitatibus expedita saepe mollitia exercitationem, minus beatae consectetur corrupti laborum dignissimos, pariatur, sunt totam maxime!</p>
+                </div>
+                <div>
+                    <p>Odio optio quas non corrupti porro dolore a, ipsam cumque et quisquam inventore quibusdam veniam rem beatae illo qui illum labore consequatur minima eaque voluptas.</p>
+                </div>
             </div>
         </div>
     </section>
     <section class="bg-dark">
-        <div class="split">
-            <div>
-                <h2>Made custom for you</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate natus expedita ea, perferendis neque eius.</p>
-            </div>
-            <div>
-                <img src="assests/pexels-valiphotos-589840.jpg" alt="Photo by Valiphotos: https://www.pexels.com/photo/tree-with-maple-leaves-589840/">
+        <div class="container">
+            <div class="split">
+                <div>
+                    <h2>Made custom for you</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate natus expedita ea, perferendis neque eius.</p>
+                </div>
+                <div>
+                    <img src="assests/pexels-valiphotos-589840.jpg" alt="Photo by Valiphotos: https://www.pexels.com/photo/tree-with-maple-leaves-589840/">
+                </div>
             </div>
         </div>
     </section>
     <section class="bg-primary">
-        <div class="split">
-            <div>
-                <img src="assests/pexels-craig-adderley-1563356.jpg" alt="Photo by Craig Adderley: https://www.pexels.com/photo/concrete-road-between-trees-1563356/">
-            </div>
-            <div>
-                <h2>Created with care</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate natus expedita ea, perferendis neque eius.</p>
+        <div class="container">
+            <div class="split">
+                <div>
+                    <img src="assests/pexels-craig-adderley-1563356.jpg" alt="Photo by Craig Adderley: https://www.pexels.com/photo/concrete-road-between-trees-1563356/">
+                </div>
+                <div>
+                    <h2>Created with care</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate natus expedita ea, perferendis neque eius.</p>
+                </div>
             </div>
         </div>
     </section>
