--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 <body>
     <header class="bg-light text-center">
-        <p>Lorem, ipsum dolor.</p>
-        <h1>Responsive layouts don't have to be a struggle</h1>
+        <div class="container container--narrow">
+            <p>Lorem, ipsum dolor.</p>
+            <h1>Responsive layouts don't have to be a struggle</h1>
+        </div>
     </header>
     <section>
         <div class="container">
