--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 </head>
 <body>
     <header class="bg-light text-center">
+        <!-- container "container--narrow added" because the header is narrower and the container--narrow class will allow more specialized editing in the future -->
         <div class="container container--narrow">
             <p>Lorem, ipsum dolor.</p>
+
+            <!-- Adding a <br> here can split the h1 in not ideal ways when the screen is resized - test by resizing the screen to see the effect -->
             <h1>Responsive layouts don't have to be a struggle</h1>
         </div>
     </header>
