--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
     <header class="bg-light text-center">
         <!-- container "container--narrow added" because the header is narrower and the container--narrow class will allow more specialized editing in the future -->
+        <!-- set container--narrow to be narrower (in main.css) than the main width (70.5rem) to avoid using <br> -->
         <div class="container container--narrow">
             <p>Lorem, ipsum dolor.</p>
 
